--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
                         <label for="message">Your Message</label>
                         <textarea id="message" name="message" required></textarea>
                     </div>
-                    <input type="hidden" name="_next" value="https://Deeksha-Gupta-web/Protfolio/thankyou.html" />      <button type="submit" class="cta-btn">Send Message</button>
-
-
+                    <button type="submit" class="btn btn-primary" style="width: 100%;">
+                        <a href="thankyou.html"> Message</a>
+                    </button>
                     <div id="formStatus" style="margin-top: 1rem; text-align: center; font-weight: 500;"></div>
                 </form>
             </div>
