--- a/thankyou.html
+++ b/thankyou.html
@@ -93,8 +93,9 @@
     </svg>
     <h1>Thank You!</h1>
     <p>Your message has been sent. Deeksha will get back to you soon.<br><br>Have a beautiful day ✨</p>
-    <a href="https://github.com/Deeksha-Gupta-web/Protfolio.git/">← Back to Portfolio</a>
+    <a href="https://deeksha-gupta-web.github.io/Protfolio/">← Back to Portfolio</a>
   </div>
 </body>
 
 </html>
+
