--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                         <textarea id="message" name="message" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary" style="width: 100%;">
-                        <a href="thankyou.html"> Message</a>
+                        <a href="https://deeksha-gupta-web.github.io/Protfolio/thankyou.html"> Message</a>
                     </button>
                     <div id="formStatus" style="margin-top: 1rem; text-align: center; font-weight: 500;"></div>
                 </form>
@@ -433,6 +433,7 @@
                 <a href="tel:+917355671592" class="phone-link" onclick="handlePhoneClick(event, '+91-7355671592')"><i class="fas fa-phone"></i></a>
                 <a href="https://www.linkedin.com/in/deeksha-gupta-149b81345/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://www.youtube.com/@CodewithDeeksha" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.github.com/Deeksha-Gupta-web" target="_blank"><i class="fab fa-github"></i></a>
 
             </div>
             <p>&copy; 2025 Deeksha Gupta. All rights reserved.</p>
