--- a/thankyou.html
+++ b/thankyou.html
@@ -431,7 +431,7 @@
 
         <div class="social-icons">
             <a href="https://www.youtube.com/@CodewithDeeksha" class="social-icon" target="_blank"><i class="fab fa-youtube"></i></a>
-            <a href="tel:+917355671592" class="phone-link" class="social-icon" onclick="handlePhoneClick(event, '+91-7355671592')"><i class="fas fa-phone"></i></a>
+            <a href="tel:+917355671592" class="phone-link, social-icon" onclick="handlePhoneClick(event, '+91-7355671592')"><i class="fas fa-phone"></i></a>
             <a href="#" class="social-icon" title="LinkedIn">
                 <i class="fab fa-linkedin-in"></i>
             </a>
@@ -443,4 +443,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
