--- a/thankyou.html
+++ b/thankyou.html
@@ -432,10 +432,10 @@
         <div class="social-icons">
             <a href="https://www.youtube.com/@CodewithDeeksha" class="social-icon" target="_blank"><i class="fab fa-youtube"></i></a>
             <a href="tel:+917355671592" class="phone-link, social-icon" onclick="handlePhoneClick(event, '+91-7355671592')"><i class="fas fa-phone"></i></a>
-            <a href="#" class="social-icon" title="LinkedIn">
+            <a href="https://www.linkedin.com/in/deeksha-gupta-149b81345/" class="social-icon" title="LinkedIn">
                 <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#" class="social-icon" title="GitHub">
+            <a href="https://github.com/Deeksha-Gupta-web" class="social-icon" title="GitHub">
                 <i class="fab fa-github"></i>
             </a>
         </div>
@@ -443,5 +443,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
